# erpnextaustria

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
erpnextaustria/: __init__.py  hooks.py  modules.txt
erpnextaustria/config/: desktop.py  docs.py  erpnextaustria.py
erpnextaustria/docs/: custom_scripts.md
erpnextaustria/docs/VAT/: AT_VAT_query.xlsx
erpnextaustria/docs/ebi/: example-ebi50.xml
erpnextaustria/docs/sql/: install_VAT_views.sh  viewATVAT_000.sql  viewATVAT_011.sql  viewATVAT_017.sql  viewATVAT_021.sql  viewATVAT_022.sql  viewATVAT_029.sql  viewATVAT_057.sql  viewATVAT_060.sql  viewATVAT_061.sql  viewATVAT_065.sql  viewATVAT_066.sql  viewATVAT_070.sql  viewATVAT_072.sql  viewATVAT_083.sql
erpnextaustria/docs/xsd/: ISO.camt.052.001.02.austrian.003.xsd  ISO.camt.053.001.02.austrian.003.xsd  ISO.camt.054.001.02.austrian.003.xsd  ISO.camt.055.001.01.austrian.003.xsd  ISO.pain.001.001.03.austrian.003.N.xsd  ISO.pain.001.001.03.austrian.003.xsd  ISO.pain.002.001.03.austrian.003.xsd  ISO.pain.007.001.02.austrian.003.xsd  ISO.pain.008.001.02.austrian.003.xsd
erpnextaustria/erpnextaustria/: ebi5p0.html  financial_export.py  utils.py
erpnextaustria/fixtures/: custom_field.json
erpnextaustria/public/js/: fiscal_year.js
erpnextaustria/public/res/: at_pincodes.csv
erpnextaustria/public/xsd/: BMF_XSD_Schema_Zusammenfassende_Meldung_ab_01_2010.xsd
erpnextaustria/templates/: ebi5p0.html
erpnextaustria/templates/xml/: account_balance_export.html  account_sheet_export.html  (+4 more)
erpnextaustria/translations/: de.csv
(+46 files in other folders)
