[project]
name = "erpnextaustria"
authors = [
    { name = "libracore AG", email = "info@libracore.com"}
]
description = "Country-specific extensions for ERPNext in Austria"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # dependencies
    "frappe",
    "zeep",
    "pypdftk",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://git.libracore.io/libracore/erpnextaustria"
Repository = "https://git.libracore.io/libracore/erpnextaustria.git"
"Bug Reports" = "https://git.libracore.io/libracore/erpnextaustria/issues"
